Fix clips routing, reorder homepage grids, fix horizontal scrollbar
- Add :clips and :ajax_clip_gallery to validator EVENTS whitelist
- Reorder homepage grid: Clips first, then Shorts, then Movies
- Fix horizontal scrollbar caused by ticker container overflow
- Clips link to YouTube directly (clips can't be iframe-embedded)

--- a/doc/resources/css/clips.css
+++ b/doc/resources/css/clips.css
@@ -109,6 +109,11 @@ div.clips-embed {
   margin-bottom:  10px;
 }
 
+a.clips-embed-wrapper-link {
+  display: block;
+  text-decoration: none;
+}
+
 div.clips-embed-wrapper {
   position: relative;
   padding-bottom: 56.25%;
